--- a/_config.yml
+++ b/_config.yml
@@ -177,5 +177,5 @@ sitemap:
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repository: https://github.com/YenYuHsuan/hexo-theme-beantech.git
-  branch: gh-page
+  repository: https://github.com/CSCI599-Lim-Squad/clothesGAN.github.io
+  branch: master
