update blog postings

--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://clothesGAN.github.io       # Note: don't forget to modify the CNAME file to your url
-root: /
+url: http://csci599-lim-squad.github.io # Note: don't forget to modify the CNAME file to your url
+root: /clothesGAN.github.io
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 
